crates/nash-codegen/tests/snapshots/vesting__vesting_parameter_uplc.snap
---
source: crates/nash-codegen/tests/vesting.rs
description: "module Cardano.Tx exposing (currentSlot, signedBy)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Lift exposing (lower)\n\n-- Test contexts encode the current slot and one signer as two Data fields.\ncurrentSlot : Data -> int\ncurrentSlot ctx =\n    case ctx of\n        Constr pair(_, [ I slot, _ ]) -> slot\n        _ -> fail\n\nsignedBy : Data -> Bytes -> bool\nsignedBy ctx owner =\n    case ctx of\n        Constr pair(_, [ _, B signer ]) -> Builtin.equalsByteString signer (lower owner)\n        _ -> fail\n\nvalidator module VestingParam exposing (main)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Lift exposing (lower)\nimport Cardano.Tx exposing (currentSlot, signedBy)\n\ntype Datum = Datum { owner : Bytes, deadline : Int }\n\ntype Redeemer = Claim | Cancel\n\nmain : int -> Datum -> Redeemer -> Data -> unit\nmain minimumLock datum redeemer ctx =\n    case redeemer of\n        Claim ->\n            assert\n                (Builtin.lessThanInteger\n                    (Builtin.addInteger (lower datum.deadline) minimumLock)\n                    (currentSlot ctx))\n        Cancel -> assert (signedBy ctx datum.owner)\n"
---
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3
          [(lam i4
            [(lam i5
              [(lam i6 i6)
                (lam i6
                  (lam i7
                    (lam i8
                      (lam i9
                        [(lam i10
                          [(lam i11
                            (force
                              [[[[[[(force (builtin chooseData)) i11]
                                (delay
                                  [(lam i12
                                    (case
                                      i12
                                      (lam i13
                                        (lam i14
                                          [(lam i15
                                            (case
                                              [[(builtin equalsInteger) i15] (con integer 0)]
                                              (case
                                                [[(builtin equalsInteger) i15] (con integer 1)]
                                                (force [[(force (builtin trace)) i1] (delay (error))])
                                                [(lam i16
                                                  [(lam i17
                                                    [(lam i18
                                                      (case
                                                        [[i5 i9] i18]
                                                        (force [[(force (builtin trace)) i0] (delay (error))])
                                                        (con unit ())))
                                                      [(force (builtin headList)) i17]])
                                                    (case i16 (lam i17 (lam i18 i18)))])
                                                  [(builtin unConstrData) i7]])
                                              [(lam i16
                                                [(lam i17
                                                  [(lam i18
                                                    [(lam i19
                                                      (case
                                                        [[(builtin lessThanInteger) [[(builtin addInteger) [i2 i19]] i6]] [i3 i9]]
                                                        (force [[(force (builtin trace)) i0] (delay (error))])
                                                        (con unit ())))
                                                      [(force (builtin headList)) i18]])
                                                    [(force (builtin tailList)) i17]])
                                                  (case i16 (lam i17 (lam i18 i18)))])
                                                [(builtin unConstrData) i7]]))
                                            i13]))))
                                    [(builtin unConstrData) i11]])]
                                (delay (force [[(force (builtin trace)) i1] (delay (error))]))]
                                (delay (force [[(force (builtin trace)) i1] (delay (error))]))]
                                (delay (force [[(force (builtin trace)) i1] (delay (error))]))]
                                (delay (force [[(force (builtin trace)) i1] (delay (error))]))]))
                            i10])
                          i8]))))])
              (lam i5
                (lam i6
                  [(lam i7
                    [(lam i8
                      [(lam i9
                        (force
                          [[[[[[(force (builtin chooseData)) i9]
                            (delay
                              [(lam i10
                                (case
                                  i10
                                  (lam i11
                                    (lam i12
                                      (case
                                        i12
                                        (lam i13
                                          (lam i14
                                            (case
                                              i14
                                              (lam i15
                                                (lam i16
                                                  [(lam i17
                                                    (force
                                                      [[[[[[(force (builtin chooseData)) i17]
                                                        (delay [(lam i18 (force i8)) [(builtin unConstrData) i17]])]
                                                        (delay [(lam i18 (force i8)) [(builtin unMapData) i17]])]
                                                        (delay [(lam i18 (force i8)) [(builtin unListData) i17]])]
                                                        (delay [(lam i18 (force i8)) [(builtin unIData) i17]])]
                                                        (delay
                                                          [(lam i18
                                                            (case
                                                              i16
                                                              (lam i19 (lam i20 (force i8)))
                                                              [(lam i19 [[(builtin equalsByteString) i19] [i4 i6]]) i18]))
                                                            [(builtin unBData) i17]])]))
                                                    i15]))
                                              (force i8))))
                                        (force i8))))))
                                [(builtin unConstrData) i9]])]
                            (delay [(lam i10 (force i8)) [(builtin unMapData) i9]])]
                            (delay [(lam i10 (force i8)) [(builtin unListData) i9]])]
                            (delay [(lam i10 (force i8)) [(builtin unIData) i9]])]
                            (delay [(lam i10 (force i8)) [(builtin unBData) i9]])]))
                        i7])
                      (delay (error))])
                    i5]))])
            (lam i4 [(builtin unBData) i4])])
          (lam i3
            [(lam i4
              [(lam i5
                [(lam i6
                  (force
                    [[[[[[(force (builtin chooseData)) i6]
                      (delay
                        [(lam i7
                          (case
                            i7
                            (lam i8
                              (lam i9
                                (case
                                  i9
                                  (lam i10
                                    (lam i11
                                      [(lam i12
                                        (force
                                          [[[[[[(force (builtin chooseData)) i12]
                                            (delay [(lam i13 (force i5)) [(builtin unConstrData) i12]])]
                                            (delay [(lam i13 (force i5)) [(builtin unMapData) i12]])]
                                            (delay [(lam i13 (force i5)) [(builtin unListData) i12]])]
                                            (delay
                                              [(lam i13
                                                (case
                                                  i11
                                                  (lam i14
                                                    (lam i15 (case i15 (lam i16 (lam i17 (force i5))) [(lam i16 i16) i13])))
                                                  (force i5)))
                                                [(builtin unIData) i12]])]
                                            (delay [(lam i13 (force i5)) [(builtin unBData) i12]])]))
                                        i10]))
                                  (force i5))))))
                          [(builtin unConstrData) i6]])]
                      (delay [(lam i7 (force i5)) [(builtin unMapData) i6]])]
                      (delay [(lam i7 (force i5)) [(builtin unListData) i6]])]
                      (delay [(lam i7 (force i5)) [(builtin unIData) i6]])]
                      (delay [(lam i7 (force i5)) [(builtin unBData) i6]])]))
                  i4])
                (delay (error))])
              i3])])
        (lam i2 [(builtin unIData) i2])])
      (con string "incomplete pattern match")])
    (con string "assertion failed")])
