crates/nash-codegen/tests/snapshots/vesting__vesting_uplc.snap
---
source: crates/nash-codegen/tests/vesting.rs
description: "module Cardano.Tx exposing (currentSlot, signedBy)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Lift exposing (lower)\n\n-- Test contexts encode the current slot and one signer as two Data fields.\ncurrentSlot : Data -> int\ncurrentSlot ctx =\n    case ctx of\n        Constr pair(_, [ I slot, _ ]) -> slot\n        _ -> fail\n\nsignedBy : Data -> Bytes -> bool\nsignedBy ctx owner =\n    case ctx of\n        Constr pair(_, [ _, B signer ]) -> Builtin.equalsByteString signer (lower owner)\n        _ -> fail\n\nvalidator module Vesting exposing (main)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Lift exposing (lower)\nimport Cardano.Tx exposing (currentSlot, signedBy)\n\ntype Datum = Datum { owner : Bytes, deadline : Int }\n\ntype step 'a = Done 'a | Next int 'a\n\ntype alias acc = { total : int, seen : list Int }\n\ntype Redeemer = Claim | Cancel\n\nmain : Datum -> Redeemer -> Data -> unit\nmain datum redeemer ctx =\n    case redeemer of\n        Claim -> assert (Builtin.lessThanInteger (lower datum.deadline) (currentSlot ctx))\n        Cancel -> assert (signedBy ctx datum.owner)\n"
---
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3
          [(lam i4
            [(lam i5 i5)
              (lam i5
                (lam i6
                  (lam i7
                    [(lam i8
                      [(lam i9
                        (case
                          i9
                          (lam i10
                            (lam i11
                              (case
                                i10
                                [(lam i12
                                  [(lam i13
                                    [(lam i14
                                      [(lam i15
                                        (case
                                          [[(builtin lessThanInteger) [i1 i15]] [i2 i7]]
                                          (force [[(force (builtin trace)) i0] (delay (error))])
                                          (con unit ())))
                                        [(force (builtin headList)) i14]])
                                      [(force (builtin tailList)) i13]])
                                    (case i12 (lam i13 (lam i14 i14)))])
                                  [(builtin unConstrData) i5]]
                                [(lam i12
                                  [(lam i13
                                    [(lam i14
                                      (case
                                        [[i4 i7] i14]
                                        (force [[(force (builtin trace)) i0] (delay (error))])
                                        (con unit ())))
                                      [(force (builtin headList)) i13]])
                                    (case i12 (lam i13 (lam i14 i14)))])
                                  [(builtin unConstrData) i5]])))))
                        [(builtin unConstrData) i8]])
                      i6])))])
            (lam i4
              (lam i5
                [(lam i6
                  [(lam i7
                    [(lam i8
                      (force
                        [[[[[[(force (builtin chooseData)) i8]
                          (delay
                            [(lam i9
                              (case
                                i9
                                (lam i10
                                  (lam i11
                                    (case
                                      i11
                                      (lam i12
                                        (lam i13
                                          (case
                                            i13
                                            (lam i14
                                              (lam i15
                                                [(lam i16
                                                  (force
                                                    [[[[[[(force (builtin chooseData)) i16] (delay (force i7))] (delay (force i7))]
                                                      (delay (force i7))]
                                                      (delay (force i7))]
                                                      (delay
                                                        [(lam i17
                                                          (case
                                                            i15
                                                            (lam i18 (lam i19 (force i7)))
                                                            [(lam i18 [[(builtin equalsByteString) i18] [i3 i5]]) i17]))
                                                          [(builtin unBData) i16]])]))
                                                  i14]))
                                            (force i7))))
                                      (force i7))))))
                              [(builtin unConstrData) i8]])]
                          (delay (force i7))]
                          (delay (force i7))]
                          (delay (force i7))]
                          (delay (force i7))]))
                      i6])
                    (delay (error))])
                  i4]))])
          (lam i3 [(builtin unBData) i3])])
        (lam i2
          [(lam i3
            [(lam i4
              [(lam i5
                (force
                  [[[[[[(force (builtin chooseData)) i5]
                    (delay
                      [(lam i6
                        (case
                          i6
                          (lam i7
                            (lam i8
                              (case
                                i8
                                (lam i9
                                  (lam i10
                                    [(lam i11
                                      (force
                                        [[[[[[(force (builtin chooseData)) i11] (delay (force i4))] (delay (force i4))]
                                          (delay (force i4))]
                                          (delay
                                            [(lam i12
                                              (case
                                                i10
                                                (lam i13
                                                  (lam i14 (case i14 (lam i15 (lam i16 (force i4))) [(lam i15 i15) i12])))
                                                (force i4)))
                                              [(builtin unIData) i11]])]
                                          (delay (force i4))]))
                                      i9]))
                                (force i4))))))
                        [(builtin unConstrData) i5]])]
                    (delay (force i4))]
                    (delay (force i4))]
                    (delay (force i4))]
                    (delay (force i4))]))
                i3])
              (delay (error))])
            i2])])
      (lam i1 [(builtin unIData) i1])])
    (con string "assertion failed")])
